Create DownloadController and DownloadControllerTests